# Maditor

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Jenkinsfile  LICENSE.md  addons.txt.in  main.cpp
CMake/: Project.cmake
Launcher/: ApplicationWrapper.cpp  ApplicationWrapper.h  CMakeLists.txt  EmbeddedWrapper.cpp  EmbeddedWrapper.h  InputWrapper.cpp  InputWrapper.h  Inspector.cpp  Inspector.h  LogListener.cpp  LogListener.h  ModuleLoader.cpp  ModuleLoader.h  maditorlauncherforward.h  maditorlauncherlib.h  main.cpp  main_embedded.cpp
Launcher/Standalone/: CMakeLists.txt  StandaloneWrapper.h  main_standalone.cpp
Launcher/Util/: AppStats.cpp  AppStats.h  LauncherLogListener.cpp  LauncherLogListener.h  LogListener.cpp  LogListener.h  OgreUtilLog.cpp  OgreUtilLog.h  Util.cpp  Util.h
Model/: ApplicationLauncher.cpp  ApplicationLauncher.h  CMakeLists.txt  DialogManager.h  MaditorLog.cpp  MaditorLog.h  ModuleLoader.cpp  ModuleLoader.h  OgreWindow.cpp  OgreWindow.h  TableModel.cpp  TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeModel.h  TreeSorter.cpp  maditor.cpp  maditor.h  maditormodelforward.h  maditormodellib.h
Model/Addons/: Addon.cpp  Addon.h
Model/Application/: ApplicationConfig.cpp  ApplicationConfig.h  ApplicationLauncher.cpp  ApplicationLauncher.h  EmbeddedLauncher.h  InputWrapper.cpp  InputWrapper.h  LogReceiver.cpp  LogReceiver.h  ModuleLoader.cpp  ModuleLoader.h  OgreLogReader.cpp  OgreLogReader.h  OgreWindow.cpp  OgreWindow.h  ProfilerModel.cpp  ProfilerModel.h  StandaloneLauncher.h  StatsModel.cpp  StatsModel.h  TableUnit.cpp  TableUnit.h  TreeUnit.cpp  TreeUnit.h  UtilModel.cpp  UtilModel.h
Model/Application/Inspector/: Inspector.cpp  Inspector.h  scopewrapper.cpp  scopewrapper.h
Model/Documents/: Document.cpp  Document.h  DocumentStore.h
Model/Logs/: LogSorterFilter.cpp  LogTableModel.cpp  LogTableModel.h  LogsModel.cpp  LogsModel.h  log.cpp  log.h
Model/Project/: ApplicationConfig.cpp  ApplicationConfig.h  ConfigList.cpp  ConfigList.h  Module.cpp  Module.h  ModuleList.cpp  ModuleList.h  ModuleSelection.cpp  ModuleSelection.h  Project.cpp  Project.h  ProjectElement.cpp  ProjectElement.h
Model/Project/Generators/: ClassGenerator.cpp  ClassGenerator.h  ClassGeneratorFactory.cpp  CmakeGenerator.cpp  CmakeGenerator.h  CmakeProject.cpp  CmakeProject.h  CmakeSubProject.cpp  CommandLine.cpp  DotGenerator.cpp  EntityComponentGenerator.cpp  Generator.cpp  GlobalAPIGenerator.cpp  GuiHandlerGenerator.cpp  OtherClassGenerator.cpp  ServerClassGenerator.cpp
Model/Server/: ServerLauncher.cpp  ServerLauncher.h
ServerLauncher/: CMakeLists.txt  LogListener.cpp  LogListener.h  ModuleLoader.cpp  ModuleLoader.h  ServerWrapper.cpp  ServerWrapper.h  maditorserverlauncherlib.cpp  maditorserverlauncherlib.h  main.cpp
Shared/: AppControl.cpp  AppControl.h  ApplicationInfo.h  CMakeLists.txt  InputInfo.h  ServerControl.cpp  ServerControl.h  ServerInfo.h  ServerSharedMemory.cpp  ServerSharedMemory.h  SharedBase.h  SharedMemory.cpp  SharedMemory.h  errorcodes.cpp  errorcodes.h  maditorsharedforward.h  maditorsharedlib.h  moduleinstance.cpp  moduleinstance.h  projectfile.cpp  projectfile.h
Shared/IPCManager/: boostIPCConnection.cpp  boostIPCConnection.h  boostIPCServer.cpp  boostIPCServer.h  boostIPCbuffer.cpp  boostIPCbuffer.h  boostIPCmanager.cpp  boostIPCmanager.h  boostIPCstream.cpp  boostIPCstream.h
Tools/: CMakeLists.txt  ProcessTalker.h
Tools/VSLink/: CMakeLists.txt  VSLink.cpp  VSLink.h  VSLinkView.cpp  VSLinkView.h
View/: CMakeLists.txt  ComponentView.h  TreeView.cpp  WindowSpawner.h  applicationwindow.cpp  applicationwindow.h  editorsettingswidget.cpp  editorsettingswidget.h  maditorforward.h  maditorlib.cpp  maditorlib.h  maditorview.cpp  maditorview.h  maditorviewforward.h  maditorviewlib.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
View/Application/: applicationlog.cpp  applicationlog.h  applicationlog.ui  applicationview.cpp  applicationview.h  applicationwindow.cpp  applicationwindow.h  appstatswidget.cpp  appstatswidget.h  configwidget.cpp  configwidget.h  configwidget.ui
View/Application/Inspector/: inspectorview.cpp  inspectorview.h  valuetypeedit.cpp  valuetypeedit.h
View/Dialogs/: DialogManager.cpp  DialogManager.h  modulepropertiesdialog.cpp  modulepropertiesdialog.h  modulepropertiesdialog.ui  newmoduledialog.cpp  settingsdialog.cpp  settingsdialog.h
View/Documents/: CentralWidget.cpp  DocumentTabBar.cpp  DocumentTabWidget.cpp  DocumentView.cpp  DocumentView.h  IndependentWindowSpawner.h  WindowSpawner.h
View/Logs/: LogsTabWidget.cpp  LogsTabWidget.h  logsview.cpp  logsview.h  logwidget.cpp  logwidget.h
View/Project/: FilesView.cpp  modulelistpropertieswidget.cpp  modulelistpropertieswidget.h  modulelistpropertieswidget.ui  modulepropertieswidget.cpp  modulepropertieswidget.h  projectview.cpp  projectview.h  propertieswidget.cpp
View/Server/: serverview.cpp  serverview.h  serverwindow.cpp  serverwindow.h  serverwindow.ui
doc/: Doxyfile
launcher/: CMakeLists.txt  applicationwrapper.cpp  applicationwrapper.h  inspector.cpp  inspector.h  maditorlauncherlib.h  main_embedded.cpp  moduleloader.cpp  moduleloader.h
launcher/standalone/: CMakeLists.txt  main_standalone.cpp  standalonewrapper.cpp  standalonewrapper.h
launcher/util/: appstats.cpp  appstats.h  launcherloglistener.cpp  util.cpp  util.h
model/: CMakeLists.txt  maditor.cpp  maditorlog.cpp  maditorlog.h  maditormodellib.h  treemodel.cpp
model/addons/: addon.cpp
model/application/: applicationlauncher.cpp  applicationlauncher.h  embeddedlauncher.cpp  embeddedlauncher.h  moduleloader.cpp  (+6 more)
shared/: CMakeLists.txt  SharedBase.h  SharedMemory.cpp  appcontrol.cpp  appcontrol.h  applicationinfo.h  inputinfo.h  maditorsharedlib.h  moduleinstance.h
templates/: Cmake.txt  CmakeMain.txt  CmakeRelease.txt  Dependencies.cmake.in  GameHandler.cpp  GlobalAPI.cpp  GuiHandler.cpp  SceneComponent.cpp  ServerClass.cpp  clientmain.cpp
test/: CMakeLists.txt  integrationtests.cpp
view/: CMakeLists.txt  TreeView.cpp  maditorviewlib.h  mainwindow.cpp  mainwindow.ui
(+55 files in other folders)
